CHANGELOG
=========
v2.2.01
-------
Fixed bug to align the Run Query button
Added the missing /* in the Help page
Replaced $gibbon->session to $session

v2.2.00
-------
Gibbon v28 Compatibility

v2.1.02
-------
Fixed JS bug introduced in ownership transfer

v2.1.01
-------
Fixed CSS bug introduced in last version

v2.1.00
-------
Transferred ownership from Ross Parker to Gibbon Foundation

v2.0.11
-------
Adjusted query execution to allow "count" as a column name

v2.0.10
-------
Fixed access check when editing Personal queries

v2.0.09
-------
Added ability to set gibbonedu.com queries and commands to inactive

v2.0.08
-------
Fix column count limited by row count

v2.0.07
-------
Fix errors in SQL not caught and displayed in Run Query

v2.0.06
-------
Added Row Limit setting
Added memory usage output below query

v2.0.05
--------
Refactoring of linkTop divs

v2.0.04
--------
Removed deprecated function calls

v2.0.03
--------
Added a CHANGEDB entry to update gibbonFormGroup references in queries

v2.0.02
--------
Added a dry run option to Run Command
v2.0.02
--------
Added a dry run option to Run Command

v2.0.01
--------
Removed the v23 requirement
Changed the icon for favourite queries/commands

v2.0.00
--------
Added an option to run Commands, which can update or delete records in the database
Added the option to favourite queries and commands so they show at the top of the list
Added translation support

v1.13.09
--------
Refactored session variables and null coalesce

v1.13.08
--------
Improved additional module sync
Increase memory limit to 512MB

v1.13.07
--------
Fixed PHP error when adding new queries

v1.13.06
--------
Fixed post-v1.13.00 clean install issue

v1.13.05
--------
Fixed queries sync not working with special characters in the organisation name

v1.13.04
--------
Fix access to the Save Query checkbox for users with edit permission
Add a check all/none option for year group checkboxes

v1.13.03
--------