@@ -54,11 +54,11 @@ if (isModuleAccessible($guid, $connection2) == false) {
                     success: function(data) {
                         if (data['access']==='1') {
                             $("#status").attr("class","success");
-                            $("#status").html('Success! Your system has a valid license to access value added Query Builder queries from gibbonedu.com. <a href=\'<?php echo $session->get('absoluteURL') ?>/index.php?q=/modules/Query Builder/queries_sync.php\'>Click here</a> to get the latest queries for your version of Gibbon.') ;
+                            $("#status").html('Success! Your system has a valid Catalyst License with access to Query Builder queries from gibbonedu.com. <a href=\'<?php echo $session->get('absoluteURL') ?>/index.php?q=/modules/Query Builder/queries_sync.php\'>Click here</a> to get the latest queries for your version of Gibbon.') ;
                         }
                         else if (data['access']==='0') {
                             $("#status").attr("class","warning");
-                            $("#status").html('Checking gibbonedu.com for a license to access value added Query Builder shows that you do not have access. You have either not set up access, or your access has expired or is invalid. Visit <a target=\'_blank\' href=\'http://gibbonedu.com\'>http://gibbonedu.com</a> to register for value added services, and then enter the name and key provided, or email <a href=\'mailto:support@gibbonedu.com\'>support@gibbonedu.com</a> to seek support as to why your key is not working. You may still use your own queries without a valid license.') ;
+                            $("#status").html('Checking gibbonedu.com for a Catalyst License to access Query Builder shows that you do not have access. You have either not set up access, or your access has expired or is invalid. Visit <a target=\'_blank\' href=\'http://gibbonedu.com\'>http://gibbonedu.com</a> to register and then enter the name and key provided, or email <a href=\'mailto:support@gibbonedu.com\'>support@gibbonedu.com</a> to seek support as to why your key is not working. You may still use your own queries without a valid license.') ;
                             $.ajax({
                                 url: "<?php echo $session->get('absoluteURL') ?>/modules/Query Builder/queries_gibboneducom_remove_ajax.php",
                                 data: "gibboneduComOrganisationName=<?php echo urlencode($gibboneduComOrganisationName) ?>&gibboneduComOrganisationKey=<?php echo $gibboneduComOrganisationKey ?>&service=queryBuilder"
@@ -79,7 +79,7 @@ if (isModuleAccessible($guid, $connection2) == false) {
         echo "<div id='status' class='warning'>";
         echo "<div style='width: 100%; text-align: center'>";
         echo "<img style='margin: 10px 0 5px 0' src='".$session->get('absoluteURL')."/themes/Default/img/loading.gif' alt='Loading'/><br/>";
-        echo __m('Checking gibbonedu.com value added license status.');
+        echo __m('Checking gibbonedu.com for Catalyst License status.');
         echo '</div>';
         echo '</div>';
         echo '</div>';
